--- a/project2/css/styles.css
+++ b/project2/css/styles.css
@@ -5,13 +5,63 @@ h1 {
     color: white;
 }
 
-body {
-    background-image: url(https://www.miamiandbeaches.com/getmedia/bbcdccc6-8f9c-41e9-b531-4b7f8b7fc093/Miami_Zoom-Rooms-Customized-Background-Images_Downtown_10.aspx?ext=.jpg);
-}
+/* .siteDescription {
+    border-radius: 5px;
+    color: black;
+    font-size: 20px;
+    text-align: center;
+    font-family: cursive;
+    margin-bottom: 25px;
+    padding: 10px 14px 10px 44px;
+} */
+.box1 {
+    width: 300px;
+    margin: 50px auto;
+    border: 4px dotted black;
+    padding: 20px;
+    text-align: center;
+    font-weight: 900;
+    color: black;
+    font-family: arial;
+    position: relative;
+    background-color: lightgrey;
+  }
+
+  .sb7:before {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 10px solid black;
+    border-right: 10px solid transparent;
+    border-top: 10px solid black;
+    border-bottom: 10px solid transparent;
+    left: 20px;
+    bottom: -23px;
+  }
+  
+  .sb7:after {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    /* border-left: 10px solid #fff; */
+    border-right: 10px solid transparent;
+    /* border-top: 10px solid #fff; */
+    border-bottom: 10px solid transparent;
+    left: 24px;
+    bottom: -13px;
+  }
+    
 
 .portrait {
     width: 300px;
     height: 350px;
-    left: 900px;
-    margin-top: 260px;;
+    margin-left: 320px;
+    margin-top: -90px;;
 }
+
+body {
+    background-image: url(https://www.miamiandbeaches.com/getmedia/bbcdccc6-8f9c-41e9-b531-4b7f8b7fc093/Miami_Zoom-Rooms-Customized-Background-Images_Downtown_10.aspx?ext=.jpg);
+}
+
