--- a/project2/css/styles.css
+++ b/project2/css/styles.css
@@ -5,15 +5,6 @@ h1 {
     color: white;
 }
 
-/* .siteDescription {
-    border-radius: 5px;
-    color: black;
-    font-size: 20px;
-    text-align: center;
-    font-family: cursive;
-    margin-bottom: 25px;
-    padding: 10px 14px 10px 44px;
-} */
 .box1 {
     width: 300px;
     margin: 50px auto;
@@ -60,6 +51,16 @@ h1 {
     margin-left: 320px;
     margin-top: -90px;;
 }
+
+button {
+    background-color: #000;
+    margin: 20px;
+    border: .5px solid mediumslateblue;
+    border-radius: 10px;
+    color: #fff;
+    padding: 8px;
+    display: inline-block;
+  }
 
 body {
     background-image: url(https://www.miamiandbeaches.com/getmedia/bbcdccc6-8f9c-41e9-b531-4b7f8b7fc093/Miami_Zoom-Rooms-Customized-Background-Images_Downtown_10.aspx?ext=.jpg);
